# obsidian-gate

./: LICENSE  README.md  pyproject.toml
obsidian-gate/: __init__.py  utils.py
obsidian-gate/cli/: __init__.py
obsidian-gate/markdown/: parser.py  renderer.py
obsidian-gate/markdown/plugins/: wikilinks.py
obsidian_gate/: __init__.py  access_control.py  build.py  cli.py  markdown.py  parser.py  utils.py  vault.py
obsidian_gate/cli/: cli.py
obsidian_gate/markdown/: __init__.py  parser.py  renderer.py
obsidian_gate/markdown/plugins/: __init__.py  access_control.py  admonitions.py  frontmatter.py  wikilinks.py
obsidian_gate/resources/: default.css  default_page_template.html  header.html  main_page_template.html  search_script.js
